Make a unified title bar